<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:gravity="center"
            android:text="@string/username"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/name_text"
            app:layout_constraintLeft_toRightOf="@+id/name_text"
            app:layout_constraintTop_toTopOf="@+id/name_text"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pwd_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/password"
            app:layout_constraintRight_toLeftOf="@+id/password"
            tools:layout_constraintBaseline_creator="1"
            tools:layout_constraintRight_creator="1" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="@+id/username"
            app:layout_constraintRight_toRightOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/remember_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/remember"
            app:layout_constraintLeft_toLeftOf="@+id/pwd_text"
            app:layout_constraintTop_toBottomOf="@+id/password"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/login_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@android:color/holo_blue_dark"
                android:onClick="Login"
                android:text="@string/login"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/register_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/holo_blue_dark"
                android:onClick="Register"
                android:text="@string/register"
                android:textColor="@android:color/background_light"
                app:layout_constraintBaseline_toBaselineOf="@+id/login_button"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_constraintBaseline_creator="1"
                tools:layout_constraintRight_creator="1" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>

